# drvcore

./: CMakeLists.txt  DrvCore.Doxyfile  drvcore.code-workspace
driver/: CMakeLists.txt  driver.c  driver.h  driver_types.h  dyn_array.c  dyn_array.h  properties.c  properties.h  property_types.h  registry.c  registry.h  test_registry.c  test_registry.h  types.h
driver/tests/: CMakeLists.txt  test_driver.c  test_driver.h  test_registry.c
drv_core/: CMakeLists.txt  drv_core.c  drv_core.h
drv_dio/: CMakeLists.txt  drv_dio.c  drv_dio.h
include/: driver.h  driver_check_parent.h  driver_types.h  registry.h  registry_types.h
src/: drv_core.c  registry.c
test/: test01.c
uml/: driver_model.puml
